syntax = "proto3";

package api;

option java_package = "com.glonassmobile.toesim.client.api";

enum PACK_DURATION {
    PACK_DURATION_UNKNOWN = 0;
    DAY = 1;
    WEEK = 2;
    TWO_WEEKS = 3;
    MONTH = 4;
}
